didn't realize that i updated a static html page instead of jinja page, i just made a slight change to have the button to add a listing as type='submit' instead of type='button'

--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -43,7 +43,7 @@
     </div>
     <div>
       <h2>Add a New Listing</h2>
-      <form>
+      <form id="addlisting" action="/listings" method="post">
         <fieldset>
           <legend>New Listing</legend>
           <p>
@@ -147,7 +147,7 @@
             </label>
           </p>
           <p>
-            <button class="btn" type="button">Add Listing</button>
+            <button class="btn" type="submit">Add Listing</button>
           </p>
         </fieldset>
       </form>
