added insert functions for the other forms as well. I also made a few minor changes to the jinja pages

--- a/templates/buyers.j2
+++ b/templates/buyers.j2
@@ -43,7 +43,7 @@
     </div>
     <div>
       <h2>Add a New Buyer</h2>
-      <form>
+      <form id="addbuyer" action="/buyers" method="post">
         <fieldset>
           <legend>New Buyer</legend>
           <p>
@@ -67,7 +67,7 @@
             </label>
           </p>
           <p>
-            <button class="btn" type="button">Add Buyer</button>
+            <button class="btn" type="submit">Add Buyer</button>
           </p>
         </fieldset>
       </form>
