--- a/templates/realtors.j2
+++ b/templates/realtors.j2
@@ -43,7 +43,7 @@
     </div>
     <div>
       <h2>Add a New Realtor</h2>
-      <form>
+      <form id="addrealtor" action="/realtors" method="post">
         <fieldset>
           <legend>New Realtor</legend>
           <p>
@@ -67,7 +67,7 @@
             </label>
           </p>
           <p>
-            <button class="btn" type="button">Add Realtor</button>
+            <button class="btn" type="submit">Add Realtor</button>
           </p>
         </fieldset>
       </form>
