--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -73,7 +73,7 @@
             </label>
             <label>
               Description:
-              <input type="text" name="desription_input" size="50" maxlength="100">
+              <input type="text" name="description_input" size="50" maxlength="100">
             </label>
           </p>
           <p>
