added nullable values to be passed and required tags on all required fields on html form inputs

--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -49,31 +49,31 @@
           <p>
             <label>
               Street Address:
-              <input type="text" name="address_input" size="70" maxlength="100">
+              <input type="text" name="address_input" size="70" maxlength="100" required>
             </label>
           </p>
           <p>
             <label>
               City:
-              <input type="text" name="city_input" size="30" maxlength="100">
+              <input type="text" name="city_input" size="30" maxlength="100" required>
             </label>
             <label>
               State:
-              <input type="text" name="state_input" size="2" maxlength="2">
+              <input type="text" name="state_input" size="2" maxlength="2" required>
             </label>
             <label>
               ZIP:
-              <input type="number" name="zip_input" size="5" maxlength="5">
+              <input type="number" name="zip_input" size="5" maxlength="5" required>
             </label>
           </p>
           <p>
             <label>
               Price:
-              <input type="number" name="price_input" size="50" maxlength="100">
+              <input type="number" name="price_input" size="50" maxlength="100" required>
             </label>
             <label>
               Description:
-              <input type="text" name="description_input" size="50" maxlength="100">
+              <input type="text" name="description_input" size="50" maxlength="100" required>
             </label>
           </p>
           <p>
@@ -82,33 +82,33 @@
               <input type="radio" name="animals" value="yes">Yes
             </label>
             <label>
-              <input type="radio" name="animals" value="no">No
+              <input type="radio" name="animals" value="no" checked="checked">No
             </label>
           </p>
           <p>
             <label>
               Beds:
-              <input type="number" name="beds_input" size="3" maxlength="3">
+              <input type="number" name="beds_input" size="3" maxlength="3" required>
             </label>
             <label>
               Baths:
-              <input type="number" name="baths_input" size="3" maxlength="3">
+              <input type="number" name="baths_input" size="3" maxlength="3" required>
             </label>
           </p>
           <p>
             <label>
               Sq Feet:
-              <input type="number" name="squarefeet_input" size="6" maxlength="6">
+              <input type="number" name="squarefeet_input" size="6" maxlength="6" required>
             </label>
             <label>
               List Date (YYYYMMDD):
-              <input type="number" name="date_input" size="8" maxlength="8">
+              <input type="number" name="date_input" size="8" maxlength="8" required>
             </label>
           </p>
           <p>
             <label>
               Number of Stories:
-              <input type="number" name="stories_input" size="2" maxlength="2">
+              <input type="number" name="stories_input" size="2" maxlength="2" required>
             </label>
           </p>
           <p>
@@ -120,7 +120,7 @@
               <input type="radio" name="garage" value="detached">Detached
             </label>
             <label>
-              <input type="radio" name="garage" value="none">None
+              <input type="radio" name="garage" value="none" checked="checked">None
             </label>
           </p>
           <p>
@@ -129,7 +129,7 @@
               <input type="radio" name="rentsale" value="rent">Rent
             </label>
             <label>
-              <input type="radio" name="rentsale" value="sale">Sale
+              <input type="radio" name="rentsale" value="sale" checked="checked">Sale
             </label>
           </p>
           <p>
@@ -143,7 +143,7 @@
             </label>
             <label>
               Seller:
-              <input type="text" name="seller_input" size="20" maxlength="100">
+              <input type="text" name="seller_input" size="20" maxlength="100" required>
             </label>
           </p>
           <p>
