--- a/templates/realtors-buyers.j2
+++ b/templates/realtors-buyers.j2
@@ -49,13 +49,13 @@
           <p>
             <label>
               RealtorID:
-              <input type="number" name="realtor_id" size="20" maxlength="100">
+              <input type="number" name="realtor_id" size="20" maxlength="100" required>
             </label>
           </p>
           <p>
             <label>
               BuyerID:
-              <input type="number" name="buyer_id" size="20" maxlength="100">
+              <input type="number" name="buyer_id" size="20" maxlength="100" required>
             </label>
           </p>
           <p>
@@ -70,13 +70,13 @@
           <p>
             <label>
               RealtorID:
-              <input type="number" name="realtor_id" size="20" maxlength="100">
+              <input type="number" name="realtor_id" size="20" maxlength="100" required>
             </label>
           </p>
           <p>
             <label>
               BuyerID:
-              <input type="number" name="buyer_id" size="20" maxlength="100">
+              <input type="number" name="buyer_id" size="20" maxlength="100" required>
             </label>
           </p>
           <p>
