--- a/templates/sellers.j2
+++ b/templates/sellers.j2
@@ -49,21 +49,21 @@
           <p>
             <label>
               First Name:
-              <input type="text" name="fname_input" size="30" maxlength="100">
+              <input type="text" name="fname_input" size="30" maxlength="100" required>
             </label>
             <label>
               Last Name:
-              <input type="text" name="lname_input" size="30" maxlength="100">
+              <input type="text" name="lname_input" size="30" maxlength="100" required>
             </label>
           </p>
           <p>
             <label>
               Email:
-              <input type="text" name="email_input" size="30" maxlength="100">
+              <input type="text" name="email_input" size="30" maxlength="100" required>
             </label>
             <label>
               Phone Number:
-              <input type="text" name="phone_input" size="30" maxlength="100">
+              <input type="text" name="phone_input" size="30" maxlength="100" required>
             </label>
           </p>
           <p>
@@ -86,28 +86,28 @@
           <p>
             <label>
               Seller ID:
-              <input type="number" name="id_update" size="5" maxlength="5">
+              <input type="number" name="id_update" size="5" maxlength="5" required>
             </label>
           </p>
           <p>
             <label>
               First Name:
-              <input type="text" name="fname_update" size="30" maxlength="100">
+              <input type="text" name="fname_update" size="30" maxlength="100" required>
             </label>
             <label>
               Last Name:
-              <input type="text" name="lname_update" size="30" maxlength="100">
+              <input type="text" name="lname_update" size="30" maxlength="100" required>
             </label>
             
           </p>
           <p>
             <label>
               Email:
-              <input type="text" name="email_update" size="30" maxlength="100">
+              <input type="text" name="email_update" size="30" maxlength="100" required>
             </label>
             <label>
               Phone Number:
-              <input type="text" name="phone_update" size="30" maxlength="100">
+              <input type="text" name="phone_update" size="30" maxlength="100" required>
             </label>
           </p>
           <p>
