--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -35,7 +35,9 @@
               {% for key in Listing.keys() %}
                 <td>{{ Listing[key] }}</td>
               {% endfor %}
-              <td><button class="btn2" type="button">Delete Listing</button></td>
+              <form id="deletelisting" action="/listings" method="post">
+                <td><button class="btn2" type="submit" name="delete_button" value="{{ Listing.ListingID }}">Delete Listing</button></td>
+              </form>
             </tr>
           {% endfor %}
         </tbody>
@@ -147,14 +149,14 @@
             </label>
           </p>
           <p>
-            <button class="btn" type="submit">Add Listing</button>
+            <button class="btn" type="submit" name="add_button" value="add_listing">Add Listing</button>
           </p>
         </fieldset>
       </form>
     </div>
     <div>
       <h2>Update a Current Listing</h2>
-      <form>
+      <form id="updatelisting" action="/listings" method="post">
         <fieldset>
           <legend>Update Listing</legend>
           <p>
@@ -164,108 +166,7 @@
             </label>
           </p>
           <p>
-            <label>
-              Street Address:
-              <input type="text" name="address_update" size="70" maxlength="100">
-            </label>
-          </p>
-          <p>
-            <label>
-              City:
-              <input type="text" name="city_update" size="30" maxlength="100">
-            </label>
-            <label>
-              State:
-              <input type="text" name="state_update" size="2" maxlength="2">
-            </label>
-            <label>
-              ZIP:
-              <input type="number" name="zip_update" size="5" maxlength="5">
-            </label>
-          </p>
-          <p>
-            <label>
-              Price:
-              <input type="number" name="price_update" size="50" maxlength="100">
-            </label>
-            <label>
-              Description:
-              <input type="text" name="desription_update" size="50" maxlength="100">
-            </label>
-          </p>
-          <p>
-            Allows animals?
-            <label>
-              <input type="radio" name="animals_update" value="yes">Yes
-            </label>
-            <label>
-              <input type="radio" name="animals_update" value="no">No
-            </label>
-          </p>
-          <p>
-            <label>
-              Beds:
-              <input type="number" name="beds_update" size="3" maxlength="3">
-            </label>
-            <label>
-              Baths:
-              <input type="number" name="baths_update" size="3" maxlength="3">
-            </label>
-          </p>
-          <p>
-            <label>
-              Sq Feet:
-              <input type="number" name="squarefeet_update" size="6" maxlength="6">
-            </label>
-            <label>
-              List Date (YYYYMMDD):
-              <input type="number" name="date_update" size="8" maxlength="8">
-            </label>
-          </p>
-          <p>
-            <label>
-              Number of Stories:
-              <input type="number" name="stories_update" size="2" maxlength="2">
-            </label>
-          </p>
-          <p>
-            Garage:
-            <label>
-              <input type="radio" name="garage_update" value="attached">Attached
-            </label>
-            <label>
-              <input type="radio" name="garage_update" value="detached">Detached
-            </label>
-            <label>
-              <input type="radio" name="garage_update" value="none">None
-            </label>
-          </p>
-          <p>
-            Rent or Sale?
-            <label>
-              <input type="radio" name="rentsale_update" value="rent">Rent
-            </label>
-            <label>
-              <input type="radio" name="rentsale_update" value="sale">Sale
-            </label>
-          </p>
-          <p>
-            <label>
-              Realtor:
-              <input type="text" name="realtor_update" size="20" maxlength="100">
-            </label>
-            <label>
-              Buyer:
-              <input type="text" name="buyer_update" size="20" maxlength="100">
-            </label>
-            <label>
-              Seller:
-              <input type="text" name="seller_update" size="20" maxlength="100">
-            </label>
-          </p>
-          <p>
-            <button class="btn" type="button">Find Listing</button>
-            <button class="btn" type="button">Update Listing</button>
+            <button class="btn" type="submit" name="update_button" value="find_listing">Find Listing</button>
           </p>
         </fieldset>
       </form>
