--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,13 @@ body{
   border-radius: 5px;
 }
 
+.delete-btn{
+  width: 100px;
+}
+
+.delete-row{
+  width: 110px;
+}
 
 .btn2 {
   background-color: gray;
