--- a/templates/buyers.j2
+++ b/templates/buyers.j2
@@ -26,7 +26,7 @@
             {% for key in Buyers[0].keys() %}
               <th>{{ key }}</th>
             {% endfor %}
-            <th></th>
+            <th class="delete-row"></th>
           </tr>
         </thead>
         <tbody>
@@ -36,7 +36,7 @@
                 <td>{{ Buyer[key] }}</td>
               {% endfor %}
               <form id="deletebuyer" action="/buyers" method="post">
-                <td><button class="btn2" type="submit" name="delete_button" value="{{ Buyer.BuyerID }}">Delete Buyer</button></td>
+                <td><button class="btn2 delete-btn" type="submit" name="delete_button" value="{{ Buyer.BuyerID }}">Delete Buyer</button></td>
               </form>
             </tr>
           {% endfor %}
