--- a/templates/realtors-buyers.j2
+++ b/templates/realtors-buyers.j2
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Strickland Realty</title>
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
   </head>
   <body>
+    <div class="container">
     <ul class="menu">
       <li class="menuItem"><a class="menuItemLink" href="index">Home</a></li>
       <li class="menuItem"><a class="menuItemLink" href="listings">Listings</a></li>
@@ -14,6 +16,7 @@
       <li class="menuItem"><a class="menuItemLink" href="sellers">Sellers</a></li>
       <li class="menuItemactive"><a class="menuItemLink" href="realtors-buyers">Realtors-Buyers</a></li>
     </ul>
+    </div>
     <div>
       <h1>Realtors-Buyers</h1>
       <p>This page will allow you to view realtors and buyers who have worked together.</p>
@@ -27,6 +30,7 @@
               <th>{{ key }}</th>
             {% endfor %}
             <th class="delete-row"></th>
+            <th class="delete-row"></th>
           </tr>
         </thead>
         <tbody>
@@ -35,10 +39,22 @@
               {% for key in RealtorBuyer.keys() %}
                 <td>{{ RealtorBuyer[key] }}</td>
               {% endfor %}
-              <form id="deleterealtor-buyer" action="/realtors-buyers" method="post">
+              {# <form id="deleterealtor-buyer" action="/realtors-buyers" method="post">
                 <input type="hidden" name=realtor_id value="{{ RealtorBuyer.RealtorID }}">
                 <input type="hidden" name=buyer_id value="{{ RealtorBuyer.BuyerID }}">
                 <td><button class="btn2 delete-btn" type="submit" name="delete_button" value="">Delete Relationship</button></td>
+              </form> #}
+
+              <form id="deleterealtor-buyer" action="/realtors-buyers" method="post">
+                <input type="hidden" name=realtor_id value="{{ RealtorBuyer.RealtorID }}">
+                <input type="hidden" name=buyer_id value="{{ RealtorBuyer.BuyerID }}">
+                <td><button class="delete-btn" type="submit" name="delete_button" value=""><i class="fas fa-trash-alt"></i></button></td>
+              </form>
+
+              <form id="deleterealtor-buyer" action="/realtors-buyers" method="post">
+                <input type="hidden" name=realtor_id value="{{ RealtorBuyer.RealtorID }}">
+                <input type="hidden" name=buyer_id value="{{ RealtorBuyer.BuyerID }}">
+                <td><button class="delete-btn" type="submit" name="edit_button" value=""><i class="far fa-edit"></i></button></td>
               </form>
             </tr>
           {% endfor %}
@@ -47,9 +63,8 @@
     </div>
     <div>
       <h2>Add a New Realtor-Buyer Relationship</h2>
+      <div class="container2">
       <form id="addrealtorbuyer" action="/realtors-buyers" method="post">
-        <fieldset>
-          <legend>New Realtor-Buyer Relationship</legend>
           <p>
             <label>
               RealtorID:
@@ -65,29 +80,7 @@
           <p>
             <button class="btn" type="submit" name="add_button" value="add_realtorbuyer">Add Relationship</button>
           </p>
-        </fieldset>
       </form>
-      <br><br>
-      <form id="updaterealtor-buyer" action="/realtors-buyers" method="post">
-        <fieldset>
-          <legend>Update Realtor-Buyer Relationship</legend>
-          <p>
-            <label>
-              RealtorID:
-              <input type="number" name="realtor_id" size="20" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              BuyerID:
-              <input type="number" name="buyer_id" size="20" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <button class="btn" type="submit" name="update_button" value="find_realtor-buyer">Find Relationship</button>
-          </p>
-        </fieldset>
-      </form>
-    </div>
+      </div>
   </body>
 </html>
