--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Strickland Realty Listings</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
   </head>
   <body>
+    <div class="container">
     <ul class="menu">
       <li class="menuItem"><a class="menuItemLink" href="index">Home</a></li>
       <li class="menuItemactive"><a class="menuItemLink" href="listings">Listings</a></li>
@@ -14,30 +15,36 @@
       <li class="menuItem"><a class="menuItemLink" href="sellers">Sellers</a></li>
       <li class="menuItem"><a class="menuItemLink" href="realtors-buyers">Realtors-Buyers</a></li>
     </ul>
+    </div>
     <div>
       <h1>Listings</h1>
       <p>This page will allow you to update real estate listings.</p>
     </div>
     <div>
       <table>
-        <caption>Listings</caption>
         <thead>
           <tr>
-            {% for key in Listings[0].keys() %}
+            {% for key in context['Listings'][0].keys() %}
               <th>{{ key }}</th>
             {% endfor %}
-            <th class="delete-row"></th>
+            <th> </th>
+            <th> </th>
           </tr>
         </thead>
         <tbody>
-          {% for Listing in Listings %}
+          {% for Listing in context['Listings'] %}
             <tr>
               {% for key in Listing.keys() %}
                 <td>{{ Listing[key] }}</td>
               {% endfor %}
               <form id="deletelisting" action="/listings" method="post">
-                <td><button class="btn2 delete-btn" type="submit" name="delete_button" value="{{ Listing.ListingID }}">Delete Listing</button></td>
+                <td><button class="delete-btn" type="submit" name="delete_button" value="{{ Listing.ListingID }}"><i class="fas fa-trash-alt"></i></button></td>
               </form>
+
+              <form id="deletelisting" action="/listings" method="post">
+                <td><button class="delete-btn" type="submit" name="edit_button" value="{{ Listing.ListingID }}"><i class="far fa-edit"></i></button></td>
+              </form>
+
             </tr>
           {% endfor %}
         </tbody>
@@ -45,131 +52,129 @@
     </div>
     <div>
       <h2>Add a New Listing</h2>
-      <form id="addlisting" action="/listings" method="post">
-        <fieldset>
-          <legend>New Listing</legend>
-          <p>
-            <label>
-              Street Address:
-              <input type="text" name="address_input" size="70" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              City:
-              <input type="text" name="city_input" size="30" maxlength="100" required>
-            </label>
-            <label>
-              State:
-              <input type="text" name="state_input" size="2" maxlength="2" required>
-            </label>
-            <label>
-              ZIP:
-              <input type="number" name="zip_input" size="5" maxlength="5" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              Price:
-              <input type="number" name="price_input" size="50" maxlength="100" required>
-            </label>
-            <label>
-              Description:
-              <input type="text" name="description_input" size="50" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            Allows animals?
-            <label>
-              <input type="radio" name="animals" value="yes">Yes
-            </label>
-            <label>
-              <input type="radio" name="animals" value="no" checked="checked">No
-            </label>
-          </p>
-          <p>
-            <label>
-              Beds:
-              <input type="number" name="beds_input" size="3" maxlength="3" required>
-            </label>
-            <label>
-              Baths:
-              <input type="number" name="baths_input" size="3" maxlength="3" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              Sq Feet:
-              <input type="number" name="squarefeet_input" size="6" maxlength="6" required>
-            </label>
-            <label>
-              List Date (YYYYMMDD):
-              <input type="number" name="date_input" size="8" maxlength="8" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              Number of Stories:
-              <input type="number" name="stories_input" size="2" maxlength="2" required>
-            </label>
-          </p>
-          <p>
-            Garage:
-            <label>
-              <input type="radio" name="garage" value="attached">Attached
-            </label>
-            <label>
-              <input type="radio" name="garage" value="detached">Detached
-            </label>
-            <label>
-              <input type="radio" name="garage" value="none" checked="checked">None
-            </label>
-          </p>
-          <p>
-            Rent or Sale?
-            <label>
-              <input type="radio" name="rentsale" value="rent">Rent
-            </label>
-            <label>
-              <input type="radio" name="rentsale" value="sale" checked="checked">Sale
-            </label>
-          </p>
-          <p>
-            <label>
-              Realtor:
-              <input type="text" name="realtor_input" size="20" maxlength="100">
-            </label>
-            <label>
-              Buyer:
-              <input type="text" name="buyer_input" size="20" maxlength="100">
-            </label>
-            <label>
-              Seller:
-              <input type="text" name="seller_input" size="20" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <button class="btn" type="submit" name="add_button" value="add_listing">Add Listing</button>
-          </p>
-        </fieldset>
-      </form>
-    </div>
-    <div>
-      <h2>Update a Current Listing</h2>
-      <form id="updatelisting" action="/listings" method="post">
-        <fieldset>
-          <legend>Update Listing</legend>
-          <p>
-            <label>
-              Listing ID:
-              <input type="number" name="id_update" size="5" maxlength="5">
-            </label>
-          </p>
-          <p>
-            <button class="btn" type="submit" name="update_button" value="find_listing">Find Listing</button>
-          </p>
-        </fieldset>
-      </form>
+      <div class="container2">
+        <form class="form" id="addlisting" action="/listings" method="post">
+            <p>
+              <label>
+                Street Address:
+                <input type="text" name="address_input" placeholder="123 test street" size="70" maxlength="100" required>
+              </label>
+            </p>
+            <p>
+              <label>
+                City:
+                <input type="text" name="city_input" size="30" maxlength="100" required>
+              </label>
+              <label>
+                State:
+                <input type="text" name="state_input" size="2" maxlength="2" required>
+              </label>
+              <label>
+                ZIP:
+                <input type="number" name="zip_input" size="5" maxlength="5" required>
+              </label>
+            </p>
+            <p>
+              <label>
+                Price:
+                <input type="number" value="100000" name="price_input" size="50" maxlength="100" required>
+              </label>
+              <label>
+                Description:
+                <input type="text" value="an okay house in an okay area..." name="description_input" size="50" maxlength="100" required>
+              </label>
+            </p>
+            <p>
+              Allows animals?
+              <label>
+                <input type="radio" name="animals" value="yes">Yes
+              </label>
+              <label>
+                <input type="radio" name="animals" value="no" checked="checked">No
+              </label>
+            </p>
+            <p>
+              <label>
+                Beds:
+                <input type="number" value="1" name="beds_input" size="3" maxlength="3" required>
+              </label>
+              <label>
+                Baths:
+                <input type="number" value="1" name="baths_input" size="3" maxlength="3" required>
+              </label>
+            </p>
+            <p>
+              <label>
+                Sq Feet:
+                <input type="number" value="2500" name="squarefeet_input" size="6" maxlength="6" required>
+              </label>
+              <label>
+                List Date:
+                <input type="date" name="date_input" size="8" maxlength="8" required>
+              </label>
+            </p>
+            <p>
+              <label>
+                Number of Stories:
+                <input type="number" value="1" name="stories_input" size="2" maxlength="2" required>
+              </label>
+            </p>
+            <p>
+              Garage:
+              <label>
+                <input type="radio" name="garage" value="attached">Attached
+              </label>
+              <label>
+                <input type="radio" name="garage" value="detached">Detached
+              </label>
+              <label>
+                <input type="radio" name="garage" value="none" checked="checked">None
+              </label>
+            </p>
+            <p>
+              Rent or Sale?
+              <label>
+                <input type="radio" name="rentsale" value="rent">Rent
+              </label>
+              <label>
+                <input type="radio" name="rentsale" value="sale" checked="checked">Sale
+              </label>
+            </p>
+            <p>
+              <label for="realtor_input">
+                Realtor:
+                <select name="realtor_input" id="realtors">
+                
+                  {% for Realtor in context['Realtors'] %}                    
+                     <option value="{{Realtor['RealtorID']}}">Name: {{Realtor['FirstName']}}, ID: {{Realtor['RealtorID']}}</option>
+                  {% endfor %}
+                </select>
+              </label>
+
+              <label for="buyer_input">
+                Buyer:
+                <select name="buyer_input" id="buyers">
+                    <option value="">None</option>
+                  {% for Buyer in context['Buyers'] %}                    
+                     <option value="{{Buyer['BuyerID']}}">Name: {{Buyer['FirstName']}}, ID: {{Buyer['BuyerID']}}</option>
+                  {% endfor %}
+                </select>
+              </label>
+
+              <label for="seller_input">
+                Seller:
+                <select name="seller_input" id="sellers">
+                  {% for Seller in context['Sellers'] %}                    
+                     <option value="{{Seller['SellerID']}}">Name: {{Seller['FirstName']}}, ID: {{Seller['SellerID']}}</option>
+                  {% endfor %}
+                </select>
+              </label>
+            </p>
+            <p>
+              <button class="btn" type="submit" name="add_button" value="add_listing">Add Listing</button>
+            </p>
+        </form>
+      </div>
     </div>
   </body>
 </html>
