--- a/templates/realtors-buyers_update.j2
+++ b/templates/realtors-buyers_update.j2
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
   </head>
   <body>
+    <div class="container">
     <ul class="menu">
       <li class="menuItem"><a class="menuItemLink" href="index">Home</a></li>
       <li class="menuItem"><a class="menuItemLink" href="listings">Listings</a></li>
@@ -14,11 +15,12 @@
       <li class="menuItem"><a class="menuItemLink" href="sellers">Sellers</a></li>
       <li class="menuItemactive"><a class="menuItemLink" href="realtors-buyers">Realtors-Buyers</a></li>
     </ul>
+    </div>
     <div>
       <h1>Realtors-Buyers</h1>
       <p>This page will allow you to update realtors and buyers who have worked together.</p>
     </div>
-      <form id="updaterealtor-buyer" action="/realtors-buyers" method="post">
+      <form id="updaterealtor-buyer" action="/realtors-buyers-update" method="post">
         <fieldset>
           <legend>Update Realtor-Buyer Relationship</legend>
           <p>
