--- a/templates/realtors_update.j2
+++ b/templates/realtors_update.j2
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
   </head>
   <body>
+    <div class="container">
     <ul class="menu">
       <li class="menuItem"><a class="menuItemLink" href="index">Home</a></li>
       <li class="menuItem"><a class="menuItemLink" href="listings">Listings</a></li>
@@ -14,13 +15,14 @@
       <li class="menuItem"><a class="menuItemLink" href="sellers">Sellers</a></li>
       <li class="menuItem"><a class="menuItemLink" href="realtors-buyers">Realtors-Buyers</a></li>
     </ul>
+    </div>
     <div>
       <h1>Realtors</h1>
       <p>This page will allow you to update realtors.</p>
     </div>
     <div>
       <h2>Update a Realtor</h2>
-      <form id="updaterealtor" action="/realtors" method="post">
+      <form id="updaterealtor" action="/realtor-update" method="post">
         <fieldset>
           <legend>Update Realtor</legend>
           <p>
