--- a/templates/sellers.j2
+++ b/templates/sellers.j2
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Strickland Realty</title>
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
   </head>
   <body>
+    <div class="container">
     <ul class="menu">
       <li class="menuItem"><a class="menuItemLink" href="index">Home</a></li>
       <li class="menuItem"><a class="menuItemLink" href="listings">Listings</a></li>
@@ -14,6 +16,7 @@
       <li class="menuItemactive"><a class="menuItemLink" href="sellers">Sellers</a></li>
       <li class="menuItem"><a class="menuItemLink" href="realtors-buyers">Realtors-Buyers</a></li>
     </ul>
+    </div>
     <div>
       <h1>Sellers</h1>
       <p>This page will allow you to update sellers.</p>
@@ -27,6 +30,7 @@
               <th>{{ key }}</th>
             {% endfor %}
             <th class="delete-row"></th>
+            <th class="delete-row"></th>
           </tr>
         </thead>
         <tbody>
@@ -36,7 +40,11 @@
                 <td>{{ Seller[key] }}</td>
               {% endfor %}
               <form id="deleteseller" action="/sellers" method="post">
-                <td><button class="btn2" type="submit" name="delete_button" value="{{ Seller.SellerID }}">Delete Seller</button></td>
+                <td><button class="delete-btn" type="submit" name="delete_button" value="{{ Seller.SellerID }}"><i class="fas fa-trash-alt"></i></button></td>
+              </form>
+
+              <form id="deleteseller" action="/sellers" method="post">
+                <td><button class="delete-btn" type="submit" name="edit_button" value="{{ Seller.SellerID }}"><i class="far fa-edit"></i></button></td>
               </form>
             </tr>
           {% endfor %}
@@ -45,57 +53,39 @@
     </div>
     <div>
       <h2>Add a New Seller</h2>
+      <div class="container2">
       <form id="addseller" action="/sellers" method="post">
-        <fieldset>
-          <legend>New Seller</legend>
-          <p>
-            <label>
-              First Name:
-              <input type="text" name="fname_input" size="30" maxlength="100" required>
-            </label>
-            <label>
-              Last Name:
-              <input type="text" name="lname_input" size="30" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              Email:
-              <input type="text" name="email_input" size="30" maxlength="100" required>
-            </label>
-            <label>
-              Phone Number:
-              <input type="text" name="phone_input" size="30" maxlength="100" required>
-            </label>
-          </p>
-          <p>
-            <label>
-              RealtorID:
-              <input type="text" name="realtor_id" size="20" maxlength="100">
-            </label>
-          </p>
-          <p>
-            <button class="btn" type="submit" name="add_button" value="add_seller">Add Seller</button>
-          </p>
-        </fieldset>
+        <p>
+          <label>
+            First Name:
+            <input type="text" name="fname_input" size="30" maxlength="100" required>
+          </label>
+          <label>
+            Last Name:
+            <input type="text" name="lname_input" size="30" maxlength="100" required>
+          </label>
+        </p>
+        <p>
+          <label>
+            Email:
+            <input type="text" name="email_input" size="30" maxlength="100" required>
+          </label>
+          <label>
+            Phone Number:
+            <input type="text" name="phone_input" size="30" maxlength="100" required>
+          </label>
+        </p>
+        <p>
+          <label>
+            RealtorID:
+            <input type="text" name="realtor_id" size="20" maxlength="100">
+          </label>
+        </p>
+        <p>
+          <button class="btn" type="submit" name="add_button" value="add_seller">Add Seller</button>
+        </p>
       </form>
-    </div>
-    <div>
-      <h2>Update a Seller</h2>
-      <form id="updateseller" action="/sellers" method="post">
-        <fieldset>
-          <legend>Update Seller</legend>
-          <p>
-            <label>
-              Seller ID:
-              <input type="number" name="id_update" size="5" maxlength="5" required>
-            </label>
-          </p>
-          <p>
-            <button class="btn delete-btn" type="submit" name="update_button" value="find_seller">Find Seller</button>
-          </p>
-        </fieldset>
-      </form>
+      </div>
     </div>
   </body>
 </html>
