--- a/templates/style.css
+++ b/templates/style.css
@@ -17,7 +17,7 @@ body{
 
 
 .btn2 {
-  background-color: gray;
+  background-color: orangered;
   color: white;
   padding: 10px 10px;
   border: none;
